--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 # fliptop-leesplankje
 =====================
 
-ape | note | mies | bouman | 3 beer
+6 7 E 5    查 investigate, examine, seek into
+7 7 0 B    看 look, see; examine, scrutinize
+6 5 7 0    数 number; several, count; fate
+5 B 5 7    字 letter, character, word
