--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# fliptop-leesplankje
-=====================
+# fliptop-box
+=============
 
 6 7 E 5    查 investigate, examine, seek into
 7 7 0 B    看 look, see; examine, scrutinize
