--- a/README
+++ b/README
@@ -5,3 +5,18 @@
 7 7 0 B    看 look, see; examine, scrutinize
 6 5 7 0    数 number; several, count; fate
 5 B 5 7    字 letter, character, word
+
+6 6 9 7    暗 dark; obscure; in secret, covert
+6 B B A    殺 kill, slaughter, murder; hurt; to pare off, reduce, clip
+5 4 0 D    名 name, rank, title, position
+5 5 A E    單 single, individual, only; lone
+ 
+6 A 5 F    機 machine; moment, chance
+6 9 C D    槍 spear, lance; gun, rifle
+8 1 0 6    脆 crisp; fragile, frail; brittle
+8 8 C 2    裂 split, crack, break open; rend
+ 
+8 A 6 9    詩 poetry; poem, verse, ode
+6 B 4 C    歌 song, lyrics; sing, chant; praise
+8 A 5 5    評 appraise, criticize, evaluate
+5 2 0 6    分 divide; small unit of time etc
