--- a/README
+++ b/README
@@ -1,6 +1,21 @@
 # fliptop-box
 =============
 
+0
+
+--------   x(4)
+
+9 6 F 6    零 zero
+
+-------    hex
+
+6 4 1 C    搜 search, seek; investigate
+7 D 2 2    索 large rope, cable; rules, laws; to demand, to exact; to search, inquire; isolated
+6 2 5 8    托 to hold up with palm; to support, rely on
+5 8 5 4    塔 tower, spire, tall building
+
+-------    unicode
+
 6 7 E 5    查 investigate, examine, seek into
 7 7 0 B    看 look, see; examine, scrutinize
 6 5 7 0    数 number; several, count; fate
