--- a/README
+++ b/README
@@ -10,7 +10,7 @@
 -------    hex
 
 6 4 1 C    搜 search, seek; investigate
-7 D 2 2    索 large rope, cable; rules, laws; to demand, to exact; to search, inquire; isolated
+7 D 2 2    索 large rope, cable; rules, laws; to demand, to exact; to search
 6 2 5 8    托 to hold up with palm; to support, rely on
 5 8 5 4    塔 tower, spire, tall building
 
